# semitic-search

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: reflex_weights.json
scripts/: backfill_ar_he_morph.py  backfill_camel_arabic.py  backfill_canonical_root.py  backfill_consonantal_roots.py  backfill_ethiopic_roots.py  backfill_nwsemitic_roots.py  backfill_semitic_from_categories.py  build_cognate_claims.py  build_fuzzy_index.py  build_index.py  build_search_cache.py  build_stretch_hebrew_font.py  compute_reflex_weights.py  coverage_stats.py  eval_ar_he_morph.py  eval_cognate_claims.py  eval_ethiopic_root.py  eval_regression.py  export_root_families.py  fetch_sefaria.py  fetch_sefaria_targums.py  find_polyglot_roots.py  fix_hash_separator.py  ingest_derivations.py  ingest_oshb.py  ingest_quran.py  ingest_scraped.py  ingest_sefaria.py  llm_backfill_ar_he.py  llm_backfill_ethiopic.py  llm_root_pilot.py  otf2ttf.py  resolve_hollow_roots.py  scrape_wiktionary_semitic.py  sync_attestations_to_turso.py  sync_canonical_to_turso.py  sync_fuzzy_index_to_turso.py  sync_to_turso.py
src/semitic_search/: ar_he_morph.py  canonical_root.py  cli.py  cognate_claims.py  consonantal_root.py  db.py  ethiopic_root.py  fuzzy_canonical.py  ingest.py  loan_replace.py  models.py  normalize.py  nwsemitic_root.py  prompt.py  reconstruct.py  romanization.py  script_convert.py  search.py  validator.py
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Comparison.tsx  HebrewScriptToggle.tsx  Keyboard.tsx  (+4 more)
(+293 files in other folders)
