[project]
name = "semitic-search"
version = "0.0.1"
description = "Identify Semitic (triliteral) roots and find cross-language cognates with confidence tiers."
requires-python = ">=3.11"
authors = [{ name = "Andy" }]
dependencies = [
    "anthropic>=0.88.0",
    "libsql-experimental>=0.0.40",
    "openai>=1.50",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
semitic-search = "semitic_search.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semitic_search"]
